# octoslave

./: .gitignore  README.md  pyproject.toml  run_research.py
docs/: PERMISSION_MODE.md  PROMPT_PROFILES.md
octoslave/: agent.py  config.py  display.py  main.py  research.py  tools.py
octoslave/prompt_profiles/: base.md  simple.md  strict.md
octoslave/web/: app.py
octoslave/web/static/: index.html
octoslave/web/static/css/: styles.css
octoslave/web/static/js/: app.js  components.js  slash-commands.js  utils.js  websocket.js
