[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "octoslave"
version = "0.1.0"
description = "Autonomous AI research & coding assistant powered by e-INFRA CZ LLM API"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "prompt_toolkit>=3.0.0",
    "ddgs>=0.1.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "psutil>=5.9.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]
all = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
octoslave = "octoslave.main:cli"
ots = "octoslave.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["octoslave*"]
